Add some missing M-codes to the "G-code quick-reference" html docs.

--- a/html/gcode.html
+++ b/html/gcode.html
@@ -75,6 +75,7 @@ tr.head td, tr.head th { background: black; color: white; }
 <TR> <TH COLSPAN=3>Spindle Control </TR>
 <TR> <TD> <A HREF="gcode/m-code.html#sec:M3-M4-M5">M3, M4</A> <TD> S <TD> Turn spindle clockwise or counterclockwise </TR>
 <TR> <TD> <A HREF="gcode/m-code.html#sec:M3-M4-M5">M5</A> <TD> <TD> Stop spindle </TR>
+<TR> <TD> <A HREF="gcode/m-code.html#sec:M19">M19</A> <TD> <TD> Orient spindle </TR>
 <TR> <TD> <A HREF="gcode/gcode.html#sec:G96-G97-Spindle">G96</A> <TD> S D <TD> CSS mode (Constant Surface Speed)</TR>
 <TR> <TD> <A HREF="gcode/gcode.html#sec:G96-G97-Spindle">G97</A> <TD> <TD> RPM mode </TR>
 <TR> <TH COLSPAN=3>Coolant </TR>
@@ -123,6 +124,10 @@ tr.head td, tr.head th { background: black; color: white; }
 <TR> <TD> <A HREF="gcode/o-code.html#sec:looping">O- while</A> <TD> <TD>Looping, while/endwhile do/while</TR>
 <TR> <TD> <A HREF="gcode/o-code.html#sec:conditional">O- if</A> <TD> <TD>Conditional, if/else/endif</TR>
 <TR> <TD> <A HREF="gcode/o-code.html#sec:repeat">O- repeat</A> <TD> <TD>Run enclosed code more than once</TR>
+<TR> <TD> <A HREF="gcode/m-code.html#_m70_save_modal_state_a_id_sec_m70_save_modal_state_a">M70</A> <TD> <TD>Save modal state</TR>
+<TR> <TD> <A HREF="gcode/m-code.html#_m71_invalidate_stored_modal_state_a_id_sec_m71_invalidate_stored_modal_state_a">M71</A> <TD> <TD>Invalidate stored state</TR>
+<TR> <TD> <A HREF="gcode/m-code.html#_m72_restore_modal_state_a_id_sec_m72_restore_modal_state_a">M72</A> <TD> <TD>Restore modal state</TR>
+<TR> <TD> <A HREF="gcode/m-code.html#_m73_save_and_autorestore_modal_state_a_id_sec_m73_save_autorestore_modal_state_a">M73</A> <TD> <TD>Save and Auto-restore modal state</TR>
 <TR> <TH COLSPAN=3>Input/Output Codes </TR>
 <TR> <TD> <A HREF="gcode/m-code.html#sec:M62-M65">M62&hellip;M65</A> <TD> P <TD> Digital Output Control </TR>
 <TR> <TD> <A HREF="gcode/m-code.html#sec:M66-Input-Control">M66</A> <TD> P E L Q <TD> Digital and Analog Input Control </TR>
