--- a/html/gcode_fr.html
+++ b/html/gcode_fr.html
@@ -72,6 +72,7 @@ tr.head td, tr.head th { background: navy; color: white; }
 <TR> <TH COLSPAN=3>Contr&ocirc;le de broche </TR>
 <TR> <TD> <A HREF="gcode/m-code_fr.html#sec:M3-M4-M5">M3, M4</A> <TD> S <TD> Marche broche sens horaire, sens anti-horaire </TR>
 <TR> <TD> <A HREF="gcode/m-code_fr.html#sec:M3-M4-M5">M5</A> <TD> <TD> Arr&ecirc;t de la broche </TR>
+<TR> <TD> <A HREF="gcode/m-code_fr.html#sec:M19">M19</A> <TD> <TD> Aligner la broche </TR>
 <TR> <TD> <A HREF="gcode/gcode_fr.html#sec:G96-G97-Broche">G96</A> <TD> D S <TD> Vitesse de coupe constante (pieds par minute ou m&egrave;tres par minute) </TR>
 <TR> <TD> <A HREF="gcode/gcode_fr.html#sec:G96-G97-Broche">G97</A> <TD> <TD> Vitesse en tours par minute </TR>
 <TR> <TH COLSPAN=3>Arrosages </TR>
