French doc: cleaning and add M19
Signed-off-by: Francis Tisserant <tissf@free.fr>

--- a/html/gcode_fr.html
+++ b/html/gcode_fr.html
@@ -72,7 +72,7 @@ tr.head td, tr.head th { background: navy; color: white; }
 <TR> <TH COLSPAN=3>Contr&ocirc;le de broche </TR>
 <TR> <TD> <A HREF="gcode/m-code_fr.html#sec:M3-M4-M5">M3, M4</A> <TD> S <TD> Marche broche sens horaire, sens anti-horaire </TR>
 <TR> <TD> <A HREF="gcode/m-code_fr.html#sec:M3-M4-M5">M5</A> <TD> <TD> Arr&ecirc;t de la broche </TR>
-<TR> <TD> <A HREF="gcode/m-code_fr.html#sec:M19">M19</A> <TD> <TD> Aligner la broche </TR>
+<TR> <TD> <A HREF="gcode/m-code_fr.html#sec:M19">M19</A> <TD> <TD> Orientation de la broche </TR>
 <TR> <TD> <A HREF="gcode/gcode_fr.html#sec:G96-G97-Broche">G96</A> <TD> D S <TD> Vitesse de coupe constante (pieds par minute ou m&egrave;tres par minute) </TR>
 <TR> <TD> <A HREF="gcode/gcode_fr.html#sec:G96-G97-Broche">G97</A> <TD> <TD> Vitesse en tours par minute </TR>
 <TR> <TH COLSPAN=3>Arrosages </TR>
@@ -124,6 +124,10 @@ tr.head td, tr.head th { background: navy; color: white; }
 <TR> <TD> <A HREF="gcode/o-code_fr.html#sec:Boucles">O- while</A> <TD> <TD>Boucles, while/endwhile do/while</TR>
 <TR> <TD> <A HREF="gcode/o-code_fr.html#sec:Conditionnels">O- if</A> <TD> <TD>Conditionnels, if/else/endif</TR>
 <TR> <TD> <A HREF="gcode/o-code_fr.html#sec:Repetitions">O- repeat</A> <TD> <TD>R&eacute;p&egrave;te n fois l'ex&eacute;cution de blocs de code</TR>
+<TR> <TD> <A HREF="gcode/m-code_fr.html#_m70_save_modal_state_a_id_sec_m70_save_modal_state_a">M70</A> <TD> <TD>Enregistre l'&eacute;tat modal</TR>
+<TR> <TD> <A HREF="gcode/m-code_fr.html#_m71_invalidate_stored_modal_state_a_id_sec_m71_invalidate_stored_modal_state_a">M71</A> <TD> <TD>Invalide l'&ecute;tat modal enregistr&egrave;</TR>
+<TR> <TD> <A HREF="gcode/m-code_fr.html#_m72_restore_modal_state_a_id_sec_m72_restore_modal_state_a">M72</A> <TD> <TD>Restaure l'&ecute;tat modal enregistr&egrave;</TR>
+<TR> <TD> <A HREF="gcode/m-code_fr.html#_m73_save_and_autorestore_modal_state_a_id_sec_m73_save_autorestore_modal_state_a">M73</A> <TD> <TD>Enregistre et auto-restaure l'&ecute;tat modal</TR>
 <TR> <TH COLSPAN=3>Codes d'entr&eacute;e/sortie </TR>
 <TR> <TD> <A HREF="gcode/m-code_fr.html#sec:M62-a-M65-Ctrl-Sortie-Numerique">M62&hellip;M65</A> <TD> P <TD> Contr&ocirc;le de sortie num&eacute;rique </TR>
 <TR> <TD> <A HREF="gcode/m-code_fr.html#sec:M66-Ctrl-Entree-Numerique-Et-Analogique">M66</A> <TD> P E L Q <TD> Contr&ocirc;le d'entr&eacute;e num&eacute;rique et analogique </TR>
