Copied directory structure of Jekyll project

--- a/index.html
+++ b/index.html
@@ -1,13 +1,74 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Machinekit &bull; Move it, build it, make it
+overview: true
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+<section class="intro">
+  <div class="grid">
+    <div class="unit whole center-on-mobiles">
+      <p class="first">Control CNC machines and robots with open-source software.</p>
+    </div>
+  </div>
+</section>
+
+<section class="features">
+  <div class="grid">
+      <div class="unit one-third">
+        <h2>Flexible</h2>
+      <p>
+        Create systems to control nearly anything.  Machine tools. Laser cutters. 3D printers. Even robots and quadcopters!
+      </p>
+    </div>
+    <div class="unit one-third">
+        <h2>Universal</h2>
+        <p>
+            Use Beaglebone Black, Raspberry Pi, ARM devices, or the spare PC in your closet.
+        </p>
+    </div>
+    <div class="unit one-third">
+      <h2>Reliable</h2>
+      <p>
+         Configure realtime threads on recent Linux kernels with Xenomai, RTAI, or RT_Preempt threads, and also in non-real time with vanilla Posix threads for simulation and testing.
+      </p>
+    </div>
+    <div class="clear"></div>
+  </div>
+</section>
+<section class="quickstart">
+  <div class="grid">
+    <div class="unit golden-small center-on-mobiles">
+      <h4>Get up and running <em>in&nbsp;seconds</em>.</h4>
+    </div>
+    <div class="unit golden-large code">
+      <p class="title">Quick-start Instructions</p>
+      <div class="shell">
+        <p class="line">
+          <span class="path">~</span>
+          <span class="prompt">$</span>
+          <span class="command">gem install jekyll</span>
+        </p>
+        <p class="line">
+          <span class="path">~</span>
+          <span class="prompt">$</span>
+          <span class="command">jekyll new my-awesome-site</span>
+        </p>
+        <p class="line">
+          <span class="path">~</span>
+          <span class="prompt">$</span>
+          <span class="command">cd my-awesome-site</span>
+        </p>
+        <p class="line">
+          <span class="path">~/my-awesome-site</span>
+          <span class="prompt">$</span>
+          <span class="command">jekyll serve</span>
+        </p>
+        <p class="line">
+          <span class="output"># => Now browse to http://localhost:4000</span>
+        </p>
+      </div>
+    </div>
+    <div class="clear"></div>
+  </div>
+</section>
+
