Edit front page description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ overview: true
 <section class="intro">
   <div class="grid">
     <div class="unit whole center-on-mobiles">
-      <p class="first">Control CNC machines and robots with open-source software.</p>
+      <p class="first">Moves. Controls. Things.</p>
     </div>
   </div>
 </section>
