--- a/index.html
+++ b/index.html
@@ -4,37 +4,38 @@ title: Machinekit &bull; Move it, build it, make it
 overview: true
 ---
 
-<section class="intro">
-  <div class="grid">
-    <div class="unit whole center-on-mobiles">
-      <p class="first">Moves. Controls. Things.</p>
-    </div>
-  </div>
-</section>
- 
 <section class="features">
   <div class="grid">
-      <div class="unit one-third">
-         <div class="feature">
-            <h2>Flexible</h2>
-            <p>Create systems to control nearly anything. Routers. Lathes. Milling machines. Laser cutters. 3D printers. Even robots and quadcopters!</p>
-        </div>
+    <div class="unit one-third">
+      <div class="feature">
+        <h2>Moves.</h2>
+	<p>
+	  Using a wide variety of I/O driver components,
+	  effortlessly coordinate motion on your choice of ARM or
+	  x86 platforms and Xenomai, RT_PREEMPT or RTAI real-time
+	  kernels.
+	</p>
+      </div>
     </div>
     <div class="unit one-third">
-        <div class="feature">
-        <h2>Universal</h2>
-        <p>
-            Machinekit works on many devices. Use Beaglebone Black, Raspberry Pi, ARM devices, or the spare PC in your closet. Run the GUI from the host or a remote tablet.
-        </p>
-    </div>
+      <div class="feature">
+        <h2>Controls.</h2>
+	<p>
+	  Remote control your Machinekit project through C or
+	  Python APIs.  Whether an Android GUI, a command line
+	  interface, or an interface into a higher-level system,
+	  Machenkit is flexible and simple to integrate.
+	</p>
+      </div>
     </div>
     <div class="unit one-third">
-        <div class="feature">
-      <h2>Reliable</h2>
-      <p>
-         Realtime Linux threads with Xenomai, RTAI, or RT_Preempt threads, and non-real time with vanilla Posix threads for simulation and testing.
-      </p>
-  </div>
+      <div class="feature">
+	<h2>Things.</h2>
+	<p>
+	  Your imagination is the limit!  Machinekit can control machine
+	  tools, quadrotors, robots, or your refrigerator.
+	</p>
+      </div>
     </div>
     <div class="clear"></div>
   </div>
