Fixup to acc1b64
Tweak title

commit acc1b64fa293c0ea3b2b9c632a8288748621769b
Author: John Morris <john@zultron.com>
Date:   Thu Jun 19 00:54:38 2014 -0500

    Front page:  simplify content

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Machinekit &bull; Move it, build it, make it
+title: Machinekit &bull; Moves.  Controls.  Things.
 overview: true
 ---
 
