--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ overview: true
 	  Remote control your Machinekit project through C or
 	  Python APIs.  Whether an Android GUI, a command line
 	  interface, or an interface into a higher-level system,
-	  Machenkit is flexible and simple to integrate.
+	  Machinekit is flexible and simple to integrate.
 	</p>
       </div>
     </div>
