Resurrect Home page search bar
Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/index.html
+++ b/index.html
@@ -41,3 +41,21 @@ overview: true
   </div>
 </section>
 
+<table style="width:100%;table-layout:fixed;overflow:hidden" >
+    <tr>
+    <td bgcolor="#FFFFFF" style="width:40%;"></td>
+        <td bgcolor="#FFFFFF" style="width:30%;">
+        <div class="top-search">
+        <form method="get" id="searchform" id="searchbox_013132401186084955638:rss8-mkzi3u" action="search-result.html">
+        <div>
+        <input value="013132401186084955638:rss8-mkzi3u" name="cx" type="hidden"/>
+        <input value="FORID:11" name="cof" type="hidden"/>
+        Search:<BR>
+        <input type="text" value="" name="s" id="s" onfocus="defaultInput(this)" onblur="clearInput(this)" />
+        </div>
+        </form>
+        </div>
+        </td>
+        <td bgcolor="#FFFFFF" style="width:30%;"></td>
+    </tr>
+</table
