New CSE and google verification details required pre-indexing
Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/search-result.html
+++ b/search-result.html
@@ -31,7 +31,7 @@ google.setOnLoadCallback(function()
     var googleAnalyticsOptions = {};
     googleAnalyticsOptions['queryParameter'] = 's';
     googleAnalyticsOptions['categoryParameter'] = '';
-    customSearchOptions['googleAnalyticsOptions'] = googleAnalyticsOptions; var customSearchControl = new google.search.CustomSearchControl('013132401186084955638:rss8-mkzi3u', customSearchOptions);
+    customSearchOptions['googleAnalyticsOptions'] = googleAnalyticsOptions; var customSearchControl = new google.search.CustomSearchControl('013132401186084955638:czl2np7sy8k', customSearchOptions);
     customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
     var options = new google.search.DrawOptions();
     options.setAutoComplete(true);
