New search engine refs for site
Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ overview: true
     <td bgcolor="#FFFFFF" style="width:40%;"></td>
         <td bgcolor="#FFFFFF" style="width:30%;">
         <div class="top-search">
-        <form method="get" id="searchform" id="searchbox_013132401186084955638:czl2np7sy8k" action="search-result.html">
+        <form method="get" id="searchform" id="searchbox_013132401186084955638:hpvljajpulu" action="search-result.html">
         <div>
-        <input value="013132401186084955638:czl2np7sy8k" name="cx" type="hidden"/>
+        <input value="013132401186084955638:hpvljajpulu" name="cx" type="hidden"/>
         <input value="FORID:11" name="cof" type="hidden"/>
         Search:<BR>
         <input type="text" value="" name="s" id="s" onfocus="defaultInput(this)" onblur="clearInput(this)" />
