add support for livereload if Jekyll environment=development
use this gist for trying it: https://gist.github.com/mhaberler/ede68eae275c38a5364734c065a1b9c0

the serve.sh script has no place here - remove

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: Machinekit &bull; Moves.  Controls.  Things.
 overview: true
 ---
 
+{% include livereload.html %}
+
 <section class="features">
   <div class="grid">
     <div class="unit one-third">
