delete RTAI from home page.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ overview: true
 	<p>
 	  Using a wide variety of I/O driver components,
 	  effortlessly coordinate motion on your choice of ARM or
-	  x86 platforms and Xenomai, RT_PREEMPT or RTAI real-time
+	  x86 platforms and Xenomai or RT_PREEMPT real-time
 	  kernels.
 	</p>
       </div>
