Add diagram to home page to visualize role

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@ overview: true
 
 {% include livereload.html %}
 
+<section class="big-diagram">
+  <img src="images/main-diagram.png" />
+</section>
+
 <section class="features">
   <div class="grid">
     <div class="unit one-third">
